--- a/animalerie/templates/animalerie/base.html
+++ b/animalerie/templates/animalerie/base.html
@@ -6,42 +6,36 @@
         <title> Animalerie de Clea Han</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="stylesheet" href="{% static 'css/animalerie.css' %}">
     </head>
 
     <body>
         <div class="titre">
             <h1> Bienvenue dans l'animalerie de Cléa Han</h1>
         </div>
-        <div class="intro"> 
-            <h3> Vous pouvez intéragir, vous amuser, chouchouter, et accompagner les animaux dans leurs merveilleuses aventures !</h3>
+            
+        <h3>Vous pouvez intéragir, vous amuser, chouchouter, et accompagner les animaux dans leurs merveilleuses aventures !</h3>
+
+        <div class="card" style="margin: 30px; border: 3px solid lightseagreen; padding: 10px;"> 
+            <div class="card-body"> 
+                <h4 class="card-title" style="font-weight: bold">Quel est le mode de vie de ces animaux ?</h4> 
+                <p class="card-text">Les animaux passent par différents états au cours de la journée: 
+                    <br/>
+                    <li>Lorsqu’ils se réveillent, ils sont "affamés" et doivent donc être placés sur la mangeoire pour être nourris.</li>
+                    <li>Une fois qu'ils ont mangé, ils sont "repus" et ont besoin d'exercice. Ils doivent donc être placés sur la roue.</li> 
+                    <li>Après avoir fait du sport, ils sont "fatigués" et ont besoin de dormir.</li>
+                    <li>Ils doivent donc être mis dans le nid pour se reposer, </li>
+                    et ainsi de suite…
+                </p>
+            </div> 
         </div>
-
         <div class="container">
-
             <div class="row">
-                
-                <div class="col-md-6"> 
-                    <h3>Les animaux</h3>
+                <div>
+                    {% block content %}
+                    {% endblock content %}
                 </div>
 
-                <div class="col-md-6">
-                    <h3>Les équipements</h3>
-                </div>
-
-            <div class="row">
-
-                <div class="col-md-6">
-                    
-                    {% block post_animal %}
-                    {% endblock post_animal %}
-                </div>
-
-                <div class="col-md-6">
-
-                    {% block post_equip %}
-                    {% endblock post_equip %}
-                </div>
             </div>
 
         </div>
