--- a/animalerie/templates/animalerie/animal_list.html
+++ b/animalerie/templates/animalerie/animal_list.html
@@ -13,7 +13,7 @@
                 <a href="{% url 'post_detail' id_animal=animal.id_animal %}">{{ animal.id_animal }}</a>
             </div>
 
-            <img class="image_animal" src='{{animal.photo}}' alt="Pas de photo"/>
+            <img class="image_animal" src='{{animal.photo}}' alt="Pas d'image"/>
 
             <div class="description_animal">
                 race : {{ animal.race }} | type : {{ animal.type }}
@@ -46,7 +46,7 @@
             </div>
             <br>
 
-            <img class="image_equipement" src={{equip.photo}} alt="Pas d'iamge"/>
+            <img class="image_equipement" src={{equip.photo}} alt="Pas d'image"/>
 
             <br>
         </div>
