--- a/animalerie/templates/animalerie/post_detail.html
+++ b/animalerie/templates/animalerie/post_detail.html
@@ -16,7 +16,7 @@
         <header>
             <h3> {{ animal.id_animal }} </h3>
         </header>
-        <img src='../../{{animal.photo}}' style="max-width: 120px; max-height: 100px; margin-bottom: 15px;" alt="manque image d'animal"/>
+        <img src='../../{{animal.photo}}' style="max-width: 120px; max-height: 100px; margin-bottom: 15px;" alt="Pas d'image"/>
         <p>Etat: {{ animal.etat }}</p>
         <p>Type: {{animal.type}} </p>
         <p>Race: {{animal.race}} </p>
